# particle-fire-simulation-using-cpp.

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SDL.cpp  particle-fire.cpp
docs/: CHANGELOG.md  bitwise-masking-shifting-combining.md  bitwise-operations.md  twos-complement.md
examples/: Particle.cpp  Particle.h  Swarm.cpp  Swarm.h  main_test.cpp  practice.cpp  sdl-basics.cpp
src/: Particle.cpp  Particle.h  Screen.cpp  Screen.h  Swarm.cpp  Swarm.h  main.cpp
tests/: smoke_test.cpp
tools/: run_smoke_test.sh  run_valgrind.sh
